[gd_scene load_steps=4 format=3 uid="uid://chairnrg5gvey"]

[ext_resource type="Script" path="res://scenes/objects/inventory/choose_action.gd" id="1_8h3tr"]
[ext_resource type="StyleBox" uid="uid://sjot4rnenycb" path="res://styles/battle_action_button.tres" id="2_68l0y"]
[ext_resource type="StyleBox" uid="uid://br5b6myxh3usi" path="res://styles/black.tres" id="2_ohwv2"]

[node name="ChooseAction" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2864.0
offset_top = 3496.0
offset_right = 2864.0
offset_bottom = 3496.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_8h3tr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1096.0
offset_top = -374.0
offset_right = 1096.0
offset_bottom = 802.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
z_index = 1
layout_mode = 2
theme_override_constants/separation = 50

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("2_ohwv2")
theme_override_styles/hover = ExtResource("2_ohwv2")
theme_override_styles/pressed = ExtResource("2_ohwv2")
theme_override_styles/focus = ExtResource("2_68l0y")
text = "BUTTON_CHOOSE_BATTLE"

[node name="Stone" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("2_ohwv2")
theme_override_styles/hover = ExtResource("2_ohwv2")
theme_override_styles/pressed = ExtResource("2_ohwv2")
theme_override_styles/focus = ExtResource("2_68l0y")
text = "BUTTON_CHOOSE_STONE"

[node name="Item" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("2_ohwv2")
theme_override_styles/hover = ExtResource("2_ohwv2")
theme_override_styles/pressed = ExtResource("2_ohwv2")
theme_override_styles/focus = ExtResource("2_68l0y")
text = "BUTTON_CHOOSE_ITEM"

[node name="Leave" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
theme_override_styles/normal = ExtResource("2_ohwv2")
theme_override_styles/hover = ExtResource("2_ohwv2")
theme_override_styles/pressed = ExtResource("2_ohwv2")
theme_override_styles/focus = ExtResource("2_68l0y")
text = "BUTTON_CHOOSE_LEAVE"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Stone" to="." method="_on_stone_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Item" to="." method="_on_item_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
